# graphics-playground

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  shader.isa.txt  shader.spv.glsl  shader.spv.txt  svt.isa.txt  svt.spv.glsl  svt.spv.txt
crates/bevy-common/: Cargo.toml
crates/bevy-common/src/: engine_util.rs  full_screen_render.rs  lib.rs
crates/bevy-common/src/camera/: plugin.rs  util.rs
crates/bevy-common/src/free_camera/: mod.rs  util.rs
crates/bsoky/: Cargo.toml  README.md  build.rs
crates/bsoky-common-cgpu/: Cargo.toml
crates/bsoky-common-cgpu/src/: lib.rs
crates/bsoky-common-cgpu/src/sim/: config.rs  data.rs  mod.rs
crates/bsoky-common-cpu/: Cargo.toml
crates/bsoky-common-cpu/src/: lib.rs
crates/bsoky-no-std/: Cargo.toml
crates/bsoky-no-std/src/: lib.rs
crates/bsoky-render-cgpu/: Cargo.toml
crates/bsoky-render-cgpu/src/: lib.rs
crates/bsoky-render-cpu/: .gitignore  Cargo.toml
crates/bsoky-render-cpu/src/: build.rs  debug_create_svt.rs  main.rs
crates/bsoky-render-cpu/src/map_render/: data.rs  mod.rs  render_pipeline_compute.rs  render_pipeline_custom_material.rs  render_pipeline_render.rs
crates/bsoky-render-gpu/: Cargo.toml
crates/bsoky-render-gpu/src/: lib.rs  ray.rs
crates/bsoky-shader/: Cargo.toml
crates/bsoky-shader/src/: lib.rs  ray.rs  shared.rs  util.rs  voxel.rs
crates/bsoky/assets/env/: svt.comp
crates/bsoky/src/: create_svt.rs  debug_create_svt.rs  env_render.rs  load_rsvo.rs  main.rs  voxel_render_compute.rs  voxel_render_fragment.rs
crates/bsoky/src/map_render/: data.rs  mod.rs  render_pipeline_compute.rs  render_pipeline_fragment.rs
crates/common/: Cargo.toml  SVT_PERF.md
crates/common-no-std/: Cargo.toml  SVO_PERF.md  SVT_PERF.md
crates/common-no-std/src/: lang.rs  lib.rs
crates/common-no-std/src/graphics/: beer_lambert.rs  color.rs  material.rs  mod.rs  util.rs
crates/common-no-std/src/math/: aabb.rs  mod.rs  ray.rs  srng.rs  svo.rs  svt.rs  vec.rs
crates/common-no-std/src/shader/: base_uniform.rs  mod.rs
crates/common/src/: lang.rs  lang_std.rs  lib.rs
crates/common/src/geometry/: bvh.rs  mod.rs  shape.rs
crates/common/src/graphics/: material.rs  mod.rs
crates/common/src/math/: aabb.rs  axis.rs  face_mask.rs  grid.rs  grid3.rs  mod.rs  shape.rs  sign.rs  srng.rs  srng_alt.rs  svo.rs  svo_std.rs  svt.rs  svt_std.rs  vec.rs  zzz_deprecated_svt.rs  zzz_deprecated_svt_std.rs
crates/common/src/shader/: base_uniform.rs  heat.rs  mod.rs  sky.rs
crates/rust-gpu-builder/: Cargo.toml
crates/rust-gpu-builder/src/: lib.rs
crates/toy-sdf-raymarching/: Cargo.toml
crates/toy-sdf-raymarching/assets/: .gitignore
crates/toy-sdf-raymarching/shader/: Cargo.toml
crates/toy-sdf-raymarching/shader/src/: lib.rs
crates/toy-sdf-raymarching/src/: main.rs
