[workspace]
members = [ "./crates/*" ]
exclude = ["./crates/bsoky-render-gpu"]
resolver = "2"

# compile build scripts (which might include rust-gpu) optimized
[profile.release.build-override]
opt-level = 3
codegen-units = 16

# compile build scripts (which might include rust-gpu) optimized
[profile.dev.build-override]
opt-level = 3

# compile dependencies (not workspace member) optimized
# https://doc.rust-lang.org/cargo/reference/profiles.html#overrides
[profile.dev.package."*"]
opt-level = 3

# [profile.release]
# debug = true

[patch.crates-io]
num-traits = { git = "https://github.com/rust-num/num-traits" }
# bevy = { git="https://github.com/bevyengine/bevy", branch="main" }
bevy = { git = "https://github.com/molikto/bevy", branch="shader-bypass" }
bevy_crevice = { git = "https://github.com/molikto/bevy", branch="shader-bypass" }

[patch."https://github.com/bevyengine/bevy"]
bevy = { git = "https://github.com/molikto/bevy", branch="shader-bypass" }
bevy_crevice = { git = "https://github.com/molikto/bevy", branch="shader-bypass" }

[patch."https://github.com/EmbarkStudios/rust-gpu"]
# spirv-builder = { git= "https://github.com/molikto/rust-gpu", branch="my-main"}
# spirv-std = { git= "https://github.com/molikto/rust-gpu", branch="my-main"}
# spirv-builder = { path = "..\\rust-gpu\\crates\\spirv-builder" }
# spirv-std = { path = "..\\rust-gpu\\crates\\spirv-std" }

## bevy 4423a2fa2dc82fad71525ed3f44e16b8481a4902