[package]
name = "bsoky-render-cpu"
version = "0.1.0"
edition = "2021"

[dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu/", features = [ "watch"] }

rand = "0.8.4"
rand_pcg = "0.3.1"
variant_count = "1.1.0"
num_enum = "0.5.4"
transmute = "0.1.1"
num-traits = "0.2.14"
maplit = "1.0.2"
enum-map= "2.0.0"
derive_more = "0.99.16"
lazy_static = "1.4.0"
serde = "1.0.130"
serde_derive = "1.0.130"
smallvec = { version = "1.7.0", features = ["serde", "union"] }
lazy-static-include = "3.1.1"
ron = "0.7.0"

log = "0.4.0"
env_logger = "0.9"

morton-encoding = "2.0.1"

dolly = "0.2.0"
egui = "0.16.1"
bevy = "0.6.0"
bevy_crevice = { version = "0.6.0", features=["glam" ] }

bevy_egui = "0.10.0"
bevy_editor_pls = { git="https://github.com/jakobhellermann/bevy_editor_pls" }


wgpu = { version = "*", features = ["glsl"] }
naga = "*"

common = { path = "../common" }
bevy-common = { path = "../bevy-common" }
bsoky-common-cpu = { path = "../bsoky-common-cpu" }
bsoky-render-cgpu = { path = "../bsoky-render-cgpu" }

sdfu = { version="0.3.1-alpha.1", features=["glam"] }
