[package]
name = "bsoky-shader"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[build]
target = "spirv-unknown-spv1.5"

[dependencies]
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu/", features = [
    "glam",
] }
common = { path = "../common" }

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
bevy_crevice = { version = "0.6.0", features=["glam" ] }