[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.7.2", features = ["derive"] }

[target.'cfg(target_arch = "spirv")'.dependencies]
glam = { version = "0.20", default-features = false, features = ["libm", "bytemuck"] }
num-traits = { version = "0.2.14", default-features = false, features = ["libm"] }


[target.'cfg(not(target_arch = "spirv"))'.dependencies]
glam = { version = "0.20", features = ["bytemuck"] }
bevy_crevice = { version = "0.6.0", features=["glam" ] }
num-traits = { version = "0.2.14" }
rand = "0.8.4"
rand_pcg = "0.3.1"
dot_vox = { version="4.1.0", optional = true }

[target.'cfg(not(target_arch = "spirv"))'.features]
default = ["svo-vox"]
svo-vox = ["dot_vox"]

[dev-dependencies]
sdfu = { version="0.3.1-alpha.1", features=["glam"] }
image = "0.23.14"
rand = "0.8.4"

